# mis-spectral-graph-solver

./: .gitignore  404.html  JAX_opt.md  METAL_GPU_RESULTS.md  MIS_Solver_using_Motzkin_Straus_and_Gurobi.ipynb  TESTS.md  analyze_graph.py  demo_clique_solvers.py  demo_dimacs_clique_solvers.py  find_max_clique_via_mis.py  generate_dimacs_graphs.py  index.html  matzkin1965.tex  mkdocs.yml  pyproject.toml  sitemap.xml  sparse_opt.txt  test_5_node_oracle_counting.py  test_diamcs_complement.py  test_dimacs_complement.py  test_large_graph_quick.py  test_vmap_implementation.py  validate_c125_clique.py  validate_jax_integration.py  validate_system.py
DIMACS/: erdos_renyi_10_p05_seed42.dimacs
doc/: Algorithms.md  JAX_INTEGRATION_SUMMARY.md  SCIPY_MILP_IMPLEMENTATION.md  regularization.md
docs/: index.md
docs/examples/: omega-computation.md
docs/getting-started/: installation.md
docs/guides/: dirac-configuration.md
docs/theory/: decision-to-search.md  motzkin-straus.md
examples/: analyze_graph.py  basic_example.py  efficient_large_graph_test.py  find_clique.md  find_max_clique_via_mis.py  get_omega.py  jax_solver_analysis.py  large_graph_benchmark.py  large_graph_comparison.py  single_graph_comparison.py  solve_dimacs_clique.py  solver_comparison.py  test_dimacs_complement.py  test_er.py  test_regularized_pgd.py  validate_c125_clique.py
examples/omega-computation/: index.html
experiments/: gumbel_noise_experiment.py  noise_utils.py
getting-started/installation/: index.html
guides/dirac-configuration/: index.html
javascripts/: katex.js
scripts/: Usage.md  dimacs_to_qplib.py  graph_to_omega.py  output_to_histogram.py  qplib_to_omega.py  regularized_graph_to_omega.py
search/: search_index.json
src/motzkinstraus/: __init__.py  algorithms.py  exceptions.py  io.py  jax_optimizers.py  visualization.py
stylesheets/: extra.css
tests/: __init__.py  conftest.py  test_algorithms.py  test_jax_oracles.py  test_networkx_comparison.py  test_oracles.py  test_solver_comparison.py
(+47 files in other folders)
