[project]
name = "motzkinstraus"
version = "0.1.0"
description = "Maximum Independent Set solver using the Motzkin-Straus theorem"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "networkx>=2.6.3,<3",
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "gurobipy>=12.0.2",
    "qci-client>=4.5.0",
    "eqc-models>=0.12.0",
    "seaborn>=0.13.2",
    "pandas>=2.3.0",
    "scipy>=1.15.3",
    "jax[metal]>=0.5.3",
]

[project.optional-dependencies]
gurobi = ["gurobipy>=11.0.0"]
dirac = ["qci-client", "eqc-models"]
jax = ["jax>=0.4.0", "jaxlib>=0.4.0"]
jax-cpu = ["jax[cpu]>=0.4.0"]
jax-gpu = ["jax[cuda]>=0.4.0"]
all = ["gurobipy>=11.0.0", "qci-client", "eqc-models", "jax>=0.4.0", "jaxlib>=0.4.0"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-jupyter>=0.24.0",
    "pymdown-extensions>=10.0.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
]
